src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates an Application to the Individual making a reservation.</description>
        <inlineHelpText>Select the primary Account associated with the Application.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates an Application to the specific User who created and submitted it.</description>
        <inlineHelpText>Select the User who is the primary applicant of this Application.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connects an Application to its requested Campsite.</description>
        <inlineHelpText>Select the Campsite that a User is applying to reserve.</inlineHelpText>
        <label>Campsite</label>
        <referenceTo>Campsite__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the latest progress of the application. Applications begin with an In-Progress status, advance to Complete upon submission by the applicant, and are then either approved or declined.</description>
        <inlineHelpText>Select the current process step of the Application.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>